force-app/main/default/objects/A_Auto_Assign_Rule__mdt/A_Auto_Assign_Rule__mdt.object-meta.xml
<CustomObject>
    <label>A+ Auto Assign Rule</label>
    <pluralLabel>A+ Auto Assign Rules</pluralLabel>
</CustomObject>