force-app/main/default/objects/A_Auto_Assign_Rule__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Field API name to which auto assigned value has to be populated</description>
    <inlineHelpText>Field API name to which auto assigned value has to be populated</inlineHelpText>
    <label>Field API Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>