force-app/main/default/objects/A_Auto_Assign_Rule__mdt/fields/Field_value__c.field-meta.xml
<CustomField>
    <fullName>Field_value__c</fullName>
    <description>Field value to be auto populated</description>
    <inlineHelpText>Field value to be auto populated</inlineHelpText>
    <label>Field value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>