force-app/main/default/objects/A_Auto_Assign_Rule__mdt/listViews/All_Rules_with_Fields.listView-meta.xml
<ListView>
    <fullName>All_Rules_with_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Keyword_To_Match__c</columns>
    <columns>Field_value__c</columns>
    <columns>A_Configuration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules with Fields</label>
</ListView>